# LegoEcho

./: README.md  range.py  trackRC
FlaskSoc/: README.md  __init__.py  flask-socket.py  hello.py  rangerObject.py  requirements.txt  test.bat
FlaskSoc/Controllers/: rangerobject.py  stubgpio.py
FlaskSoc/Controllers/tests/: testRangerObject.py  testStubGPIO.py
FlaskSoc/static/: barGraphTest.html  bargraphs.css  bargraphs.js  custom.css  fl_sock.js  radar-canvas.css  radar-canvas.js  radar.css  radar.js  sound.html  sound.js  test.html
FlaskSoc/templates/: index.html
FlaskSoc/unittest/: context.py  test2.py
HC-SR04/: README.md  distance_sensor.py  rangerObject.py
HallCalib/: Calibration_ReadMe.txt  Results.xlsx  expVideoScript.txt
HallCalib/ArduinoHallEffect/: ArduinoHallEffect.ino
HallCalib/Exp1/: Results1  Results2
HallCalib/Exp2/: Results1  Results2
HallCalib/Exp3/: Results1  Results2
HallCalib/Exp4/: Run1
HallCalib/LegoEcho/: Results.xlsx  trackRC
HallCalib/RunCalib/: RunCalib.ino
HallCalib/ky-003/: ky-003.ino
Interface/: canvas.html  canvas.js  custom.css  home.html
LegoControl/: LegoControl.ino  distance_sensor.py
MakeMeABat02/: MakeMeABat02.ino  Readme.md
PiDrive/: blink.py  driverObject.py  ledFlash.py  motor.py
SparkFun-SX1509-master/: CMakeLists.txt  Makefile  README.md  SparkFunSX1509.cpp  SparkFunSX1509.h  SparkFunSX1509.h.gch  demo  main.cpp  sx1509_registers.h.gch
python-testing-101/example-py-unittest_2/FlaskSoc/: calc.py  rangerobject.py
pythonBook/book_examples/chapter_01/: 1_3.py  chapter_1_1.py  chapter_1_2.py
(+14 files in other folders)
